actualizacion del mail

--- a/index.html
+++ b/index.html
@@ -783,10 +783,10 @@
         </div>
         <div class="col-md-5">
           <p>
-            Just feel free to contact if you wanna collaborate with me, or simply have a conversation.
+            No dudes en contactarme si quieres colaborar conmigo o simplemente tener una conversación.
           </p>
           <h3>
-            <a href="mailto:contact@yourwebsite.com" class="text-white text-decoration-none">contact@yourwebsite.com</a>
+            <a href="mailto:maniat1kster@gmail.com" class="text-white text-decoration-none">maniat1kster@gmail.com</a>
           </h3>
         </div>
       </div>
