dandole una inpronta a las preguntas frecuentes.

--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
     <div class="container">
       <div class="text-center pt-5">
         <h2 class="display-3">
-          FAQs
+          Preguntas Frecuentes
         </h2>
       </div>
       <div class="row mt-5">
@@ -558,13 +558,12 @@
                 <button class="accordion-button collapsed" style="font-weight:bold;" type="button"
                   data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true"
                   aria-controls="collapseOne">
-                  Can I use credit cards or USD for payment?
+                  ¿Ese script de la foto es real?
                 </button>
               </h5>
               <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordion-flush"" >
                                 <div class=" accordion-body">
-                <p>Et nec ipsum tincidunt ut felis elementum proin eget dignissim egestas quis velit maecenas magnis.
-                  Etiam faucibus et ultrices sit aliquet ultrices.</p>
+                <p>Sí, y todavía funciona. Tengo mucha otras cosas en github que todavia funcionan, o son divertidas de volver a estudiar.</p>
               </div>
             </div>
           </div>
@@ -573,13 +572,12 @@
               <button class="accordion-button collapsed" style="font-weight:bold;" type="button"
                 data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
                 aria-controls="collapseTwo">
-                What times are you available for calls?
+                ¿Qué tipo de cosas te gusta automatizar?
               </button>
             </h5>
             <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordion-flush">
               <div class="accordion-body">
-                <p>Labore accusam in modo compungi, iacentem substantiales um se sed esse haec. Labore accusam in modo
-                  compungi, iacentem substantiales um se sed esse haec.</p>
+                <p>odo lo que me haga escribir menos correos y hacer menos clics. Desde reportes hasta scripts que se autocomprueban.</p>
               </div>
             </div>
           </div>
@@ -588,13 +586,12 @@
               <button class="accordion-button collapsed" style="font-weight:bold;" type="button"
                 data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false"
                 aria-controls="collapseThree">
-                How do I hire you for few months?
+                ¿Este sitio también está automatizado?
               </button>
             </h5>
             <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordion-flush">
               <div class="accordion-body">
-                <p>Et nec ipsum tincidunt ut felis elementum proin eget dignissim egestas quis velit maecenas magnis.
-                  Etiam faucibus et ultrices sit aliquet ultrices.</p>
+                <p>Claro. Se versiona, se commitea y se publica solo. Si estás leyendo esto, probablemente ya hice un push hace unos minutos.</p>
               </div>
             </div>
           </div>
@@ -603,13 +600,12 @@
               <button class="accordion-button collapsed" style="font-weight:bold;" type="button"
                 data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false"
                 aria-controls="collapseFour">
-                Will I get the source files of my order?
+                ¿Trabajás en proyectos para otros?
               </button>
             </h5>
             <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordion-flush">
               <div class="accordion-body">
-                <p>Et nec ipsum tincidunt ut felis elementum proin eget dignissim egestas quis velit maecenas magnis.
-                  Etiam faucibus et ultrices sit aliquet ultrices.</p>
+                <p>Me gusta trabajar en equipo, es uno de mis talentos.</p>
               </div>
             </div>
           </div>
@@ -618,13 +614,12 @@
               <button class="accordion-button collapsed" style="font-weight:bold;" type="button"
                 data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false"
                 aria-controls="collapseFive">
-                Will I get the source files of my order?
+                ¿Por qué “Maniat1k”?
               </button>
             </h5>
             <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordion-flush">
               <div class="accordion-body">
-                <p>Et nec ipsum tincidunt ut felis elementum proin eget dignissim egestas quis velit maecenas magnis.
-                  Etiam faucibus et ultrices sit aliquet ultrices.</p>
+                <p>Porque “MarceloLemosDev” sonaba demasiado serio. Y porque a veces el código se pone... maniático.</p>
               </div>
             </div>
           </div>
