la ortografia nene!

--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
             </h5>
             <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordion-flush">
               <div class="accordion-body">
-                <p>odo lo que me haga escribir menos correos y hacer menos clics. Desde reportes hasta scripts que se autocomprueban.</p>
+                <p>Todo lo que me haga escribir menos correos y hacer menos clics. Desde reportes hasta scripts que se autocomprueban.</p>
               </div>
             </div>
           </div>
