un toque de humor

--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
           <div class="info-box">
             <img src="images/logo-2.png" class="img-fluid">
             <p class="py-4">
-              Subscribe to newsletter to get some updates related with branding, designs and more.
+              Suscríbete al boletín que no pienso hacer para recibir actualizaciones que no voy a dar relacionadas con la marca, diseños y más.
             </p>
             <div class="social-links">
               <svg class="twitter" width="24" height="24">
