--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
   <!--style sheet-->
   <link rel="stylesheet" href="css/style.css">
 
-
 </head>
 
 <body>
@@ -633,83 +632,31 @@
     <div class="container">
       <div class="text-center">
         <h2 class="display-3">
-          Latest News
+          Últimos posts!
         </h2>
         <p>
-          Accusan maiores alias conseaut equatur aut perferendi.
+          Pequeños destellos de escritura, ya que no uso otra cosa que microblogin.
         </p>
       </div>
       <div class="row py-4">
-        <div class="col-lg-6 p-3">
-          <div class="post-item p-3 border rounded-5">
-            <div class="row g-md-5">
-              <div class="col-lg-5">
-                <img src="images/post-thumb-1.jpg" class="img-fluid rounded-4">
-              </div>
-              <div class="col-lg-7">
-                <p class="text-uppercase text-muted mt-3">
-                  Design / Sept 12, 2022
-                </p>
-                <h3>
-                  Graphic Designing Useful Tips & Best Practices
-                </h3>
-              </div>
-
-            </div>
+        <div class="col-lg-6 p-3" >
+          <div class="post-item p-3 border rounded-5" >
+            <blockquote class="twitter-tweet"><p lang="es" dir="ltr">Lo que hice / lo que interpreto <a href="https://twitter.com/hashtag/ChatGPT?src=hash&amp;ref_src=twsrc%5Etfw">#ChatGPT</a> <a href="https://t.co/buBOAy9W6s">pic.twitter.com/buBOAy9W6s</a></p>&mdash; maniat1k (@maniat1kUy) <a href="https://twitter.com/maniat1kUy/status/1973759046395334884?ref_src=twsrc%5Etfw">October 2, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
           </div>
         </div>
         <div class="col-lg-6 p-3">
           <div class="post-item p-3 border rounded-5">
-            <div class="row g-md-5">
-              <div class="col-lg-5">
-                <img src="images/post-thumb-2.jpg" class="img-fluid rounded-4">
-              </div>
-              <div class="col-lg-7">
-                <p class="text-uppercase text-muted mt-3">
-                  Design / Sept 12, 2022
-                </p>
-                <h3>
-                  Best way to do branding of digital products 
-                </h3>
-              </div>
-
-            </div>
+           <blockquote class="twitter-tweet" data-media-max-width="560"><p lang="en" dir="ltr">1 Hour Lo-Fi Chill Beats | Relaxing Study &amp; Focus Music <a href="https://t.co/NH3wtdzyHo">https://t.co/NH3wtdzyHo</a> via <a href="https://twitter.com/YouTube?ref_src=twsrc%5Etfw">@YouTube</a></p>&mdash; maniat1k (@maniat1kUy) <a href="https://twitter.com/maniat1kUy/status/1972166662322569369?ref_src=twsrc%5Etfw">September 28, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
           </div>
         </div>
         <div class="col-lg-6 p-3">
           <div class="post-item p-3 border rounded-5">
-            <div class="row g-md-5">
-              <div class="col-lg-5">
-                <img src="images/post-thumb-3.jpg" class="img-fluid rounded-4">
-              </div>
-              <div class="col-lg-7">
-                <p class="text-uppercase text-muted mt-3">
-                  Design / Sept 12, 2022
-                </p>
-                <h3>
-                  Top 10 graphic designs review in 2022
-                </h3>
-              </div>
-
-            </div>
+            <blockquote class="twitter-tweet"><p lang="en" dir="ltr">aprendiendo a poder sacar texto de un audio en <a href="https://twitter.com/hashtag/python?src=hash&amp;ref_src=twsrc%5Etfw">#python</a> <br>python -m whisper &quot;audio.mp3&quot; --language es --task transcribe --model small --output_format all --output_dir &quot;.\transcripts&quot;</p>&mdash; maniat1k (@maniat1kUy) <a href="https://twitter.com/maniat1kUy/status/1966147294094569957?ref_src=twsrc%5Etfw">September 11, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
           </div>
         </div>
         <div class="col-lg-6 p-3">
           <div class="post-item p-3 border rounded-5">
-            <div class="row g-md-5">
-              <div class="col-lg-5">
-                <img src="images/post-thumb-4.jpg" class="img-fluid rounded-4">
-              </div>
-              <div class="col-lg-7">
-                <p class="text-uppercase text-muted mt-3">
-                  Design / Sept 12, 2022
-                </p>
-                <h3>
-                  Graphic Designing Useful Tips & Best Practices
-                </h3>
-              </div>
-
-            </div>
+            <blockquote class="twitter-tweet"><p lang="es" dir="ltr">🚀 Nace la identidad visual de MANIAT1K<br>Code Hard / Deploy Harder 💻⚡<br>Diseño + Geek + DevOps = 🔥<a href="https://twitter.com/hashtag/Branding?src=hash&amp;ref_src=twsrc%5Etfw">#Branding</a> <a href="https://twitter.com/hashtag/Design?src=hash&amp;ref_src=twsrc%5Etfw">#Design</a> <a href="https://twitter.com/hashtag/DevOps?src=hash&amp;ref_src=twsrc%5Etfw">#DevOps</a> <a href="https://twitter.com/hashtag/GeekCulture?src=hash&amp;ref_src=twsrc%5Etfw">#GeekCulture</a> <a href="https://twitter.com/hashtag/Tech?src=hash&amp;ref_src=twsrc%5Etfw">#Tech</a> <a href="https://t.co/RBcFckDvEM">pic.twitter.com/RBcFckDvEM</a></p>&mdash; maniat1k (@maniat1kUy) <a href="https://twitter.com/maniat1kUy/status/1959262645648855470?ref_src=twsrc%5Etfw">August 23, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
           </div>
         </div>
       </div>
@@ -727,8 +674,9 @@
           <div class="info-box">
             <img src="images/logo-2.png" class="img-fluid">
             <p class="py-4">
-              Suscríbete al boletín que no pienso hacer para recibir actualizaciones que no voy a dar relacionadas con la marca, diseños y más.
+               Suscríbete al boletín que no pienso hacer 😅 para recibir actualizaciones que no voy a dar 😂 relacionadas con la marca, diseños y más.
             </p>
+
             <div class="social-links">
               <svg class="twitter" width="24" height="24">
                 <use xlink:href="#twitter"></use>
