Commit ya firmado con Gmail

--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
               </h5>
               <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordion-flush"" >
                                 <div class=" accordion-body">
-                <p>Sí, y todavía funciona. Tengo mucha otras cosas en github que todavia funcionan, o son divertidas de volver a estudiar.</p>
+                <p>Sí jajjaj, naa es broma, eso era solo una ejemplo para mostrar el theme que hice en xterm. Tengo mucha otras cosas en github que todavia funcionan, o son divertidas de volver a estudiar.</p>
               </div>
             </div>
           </div>
@@ -635,7 +635,7 @@
           Últimos posts!
         </h2>
         <p>
-          Pequeños destellos de escritura, ya que no uso otra cosa que microblogin.
+          Pequeños destellos de escritura, ya que no uso otra cosa que microblogin. Basicamente en un futuro alguna vuelta le voy a encontrar para publicar mis ultimos tweets como se hacia antes y ya no.
         </p>
       </div>
       <div class="row py-4">
@@ -661,9 +661,9 @@
         </div>
       </div>
       <div class="text-center">
-        <button type="button" class="btn btn-outline-dark btn-lg mt-3 btn-color text-uppercase">
+        <!--<button type="button" class="btn btn-outline-dark btn-lg mt-3 btn-color text-uppercase">
           View All Blogs
-        </button>
+        </button>-->
       </div>
     </div>
   </section>
