cambios de imagenes y el index.html para corregir los comentarios de los ejemplos de Youtube en la sección de portafolio. Aquí está el mensaje de commit sugerido:

--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
               title="Proyecto en Github"><img src="images/illustration-2.jpg"
                 class="img-fluid rounded-4" alt="Github"></a>
           </div>
-          <!-- Ejemplo Youtube -->
+          <!-- Ejemplo Youtube: este ya lo edite-->
           <div class="col mb-4 portfolio-item youtube">
             <a href="images/illustration-3.jpg" data-lightbox="youtube-1" data-title="Youtube Ejemplo"
               title="Video en Youtube"><img src="images/illustration-3.jpg"
@@ -504,12 +504,12 @@
               title="Otro proyecto en Github"><img src="images/illustration-5.jpg"
                 class="img-fluid rounded-4" alt="Github"></a>
           </div>
-          <!-- Ejemplo Youtube -->
+          <!-- Ejemplo Youtube
           <div class="col mb-4 portfolio-item youtube">
             <a href="images/illustration-1.jpg" data-lightbox="youtube-2" data-title="Youtube Ejemplo 2"
               title="Otro video en Youtube"><img src="images/illustration-1.jpg"
                 class="img-fluid rounded-4" alt="Youtube"></a>
-          </div>
+          </div> -->
           <!-- Ejemplo Diseño Gráfico (solo visible en 'Todos') -->
           <div class="col mb-4 portfolio-item graphicdesign">
             <a href="images/illustration-2.jpg" data-lightbox="graphicdesign-1" data-title="Diseño Gráfico"
