--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
     </div>
   </section>
 
-  <section class="py-5">
+  <!-- <section class="py-5">
     <div class="container">
       <div class="text-center">
         <h2 class="display-3">
@@ -661,12 +661,10 @@
         </div>
       </div>
       <div class="text-center">
-        <!--<button type="button" class="btn btn-outline-dark btn-lg mt-3 btn-color text-uppercase">
-          View All Blogs
-        </button>-->
+        
       </div>
     </div>
-  </section>
+  </section>-->
   <footer id="footer" class="bg-black text-white py-5">
     <div class="container-sm">
       <div class="row g-md-5 my-5">
